--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "league/oauth2-client": "^2.4",
         "symfony/cache": "^4.3",
         "jaeger/querylist": "^4.1",
-        "predis/predis": "^1.1"
+        "predis/predis": "^1.1",
+        "aliyuncs/oss-sdk-php": "^2.3"
     },
     "autoload": {
         "psr-4": {
