--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,7 @@
         "php": ">7.0",
         "pimple/pimple": "^3.2",
         "symfony/cache": "^4.3",
-        "jaeger/querylist": "^4.1",
-        "aliyuncs/oss-sdk-php": "^2.3"
+        "jaeger/querylist": "^4.1"
     },
     "autoload": {
         "psr-4": {
